# GIRLsmarts-workshop

./: .gitignore  .nojekyll  README.md  index.html  pyproject.toml  robots.txt  search.json  sitemap.xml  workshop-01.html  workshop-02.html  workshop-05.html  workshop.html
_freeze/slides/slides-02-ml-intro/execute-results/: html.json
_freeze/slides/slides-03-language-models/execute-results/: html.json
_freeze/slides/slides-04-search/execute-results/: html.json
slides/: keyword-semantic-search-demo.ipynb  slides-04-search.html  slides-05-summary.html
slides/code/: plotting_functions.py
website/: .gitignore  _quarto.yml  index.qmd  workshop-02.qmd  workshop-03.qmd  workshop-04.qmd  workshop-05.qmd
website/_site/: index.html  listings.json  search.json  sitemap.xml  workshop-01.html  workshop-02.html  workshop-03.html  workshop-04.html  workshop-05.html  workshop.html
website/_site/_freeze/slides/slides-02-ai-ml-intro/execute-results/: html.json
website/_site/_freeze/slides/slides-03-language-models/execute-results/: html.json
website/_site/_freeze/slides/slides-04-search/execute-results/: html.json
website/_site/about/: index.html
website/_site/slides/: slides-01-intro.html  slides-01-intro.qmd  slides-02-ai-ml-intro.html  slides-02-ai-ml-intro.qmd  slides-03-language-models.html  slides-03-language-models.qmd  slides-04-search.html  slides-04-search.qmd  slides-05-summary.html  slides.scss
website/about/: index.qmd
website/slides/: recipe-generation-demo.ipynb  slides-04-search.qmd  slides-05-summary.qmd
