[project]
name = "girlsmarts-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.9.0",
    "spacy>=3.8.14",
    "wikipedia>=1.4.0",
]
